--- a/apache_spark/thesis/einfuehrung.tex
+++ b/apache_spark/thesis/einfuehrung.tex
@@ -111,10 +111,16 @@ Aus diesem Grund wurde am \textit{AMPLab} der University of California in Berkel
 \section{Ziel und Aufbau dieser Arbeit}
 \label{section:ziel dieser Arbeit}
 
-Die vorliegende Arbeit beschäftigt sich mit \textit{Apache Spark} und dem dazugehörigen Ökosystem bestehend aus Schichten mit verschiedenen Bibliotheken, dem \textit{Berkeley Data Anaytics Stack (BDAS)}. Auf dem Markt befindet sich bislang noch verhältnismäßig wenig Literatur zu diesem Thema und wenn, dann werden zumeist Teilaspekte für bestimmte Anwendungsbereiche gekapselt betrachtet. Diese Arbeit soll, nachdem einige Grundlagen zum Thema \textit{Big Data Analytics} im Allgemeinen diskutiert werden, zunächst einen ganzheitlichen Überblick über den BDAS bieten. Hier werden die einzelnen Schichten des Stacks kurz beschrieben und gegebenenfalls Alternativlösungen zu den jeweiligen Implementierungen vorgestellt. 
+Die vorliegende Arbeit beschäftigt sich mit \textit{Apache Spark} und dem dazugehörigen Ökosystem bestehend aus aus einem Applikationsstack mit verschiedenen Bibliotheken, dem \textit{Berkeley Data Anaytics Stack (BDAS)}. Aufgrund der Konzepte von Spark ist dieses unter anderem prädestiniert für Machine-Learning-Anwendungen. Diese bilden, neben der eigentlichen Kernimplementierung von Spark, einen zentralen Teil dieser Arbeit.  Auf dem Markt befindet sich bislang noch verhältnismäßig wenig Literatur zu diesem Thema und wenn, dann werden zumeist Teilaspekte für bestimmte Anwendungsbereiche gekapselt betrachtet. 
 
-Insbesondere werden in den darauffolgenden Kapiteln die Statistik- und Vorhersagebibliotheken \textit{MLLib} betrachtet, in einigen Punkten mit der Alternativbibliothek \textit{H2O} verglichen und die Kernimplementierung von Spark mit dem neueren Framework \textit{Apache Flink} \footnote{Entwickelt von der Technischen Universität Berlin zunächst unter dem Namen \textit{Stratosphere} und mittlerweile (Stand Ende 2014) \textit{Apache Incubator} Projekt} verglichen. Auch die übrigen Elemente des BDAS wie das Caching-Frameworks Tachyon, sowie die Streaming-Bibliothek Spark Streaming und die Graphenanwendung GraphX werden vorgestellt. 
+Diese Arbeit soll, nachdem einige Grundlagen zum Thema \textit{Big Data Analytics} im Allgemeinen diskutiert werden, zunächst einen ganzheitlichen Überblick über den BDAS bieten. Hier werden die einzelnen Schichten des Stacks kurz beschrieben und gegebenenfalls Alternativlösungen zu den jeweiligen Implementierungen vorgestellt. 
 
-Im letzten Teil dieser Arbeit werden jeweils praktische Anwendungsbeispiele gezeigt und im Zuge dessen die APIs \footnote{API = Application Programming Interface. Schnittstelle, die von einem Softwaresystem für die Einbindung in andere Softwwaresysteme zur Verfügung gestellt wird.}von Spark und MLlib insbesondere vorgestellt.   
+Insbesondere wird in den darauffolgenden Grundlagenkapiteln die Machine-Learning-Bibliothek \textit{MLLib} betrachtet. Um ein Verständnis für die Funktionen dieser Bibliothek zu vermitteln, wird zunächst eine Einführung in die Grundlagen in die Themengebiete Data-Mining und Machine-Learning vermittelt. Anschließend werden die elementaren Machine-Learning-Algorithmen vorgestellt, welche in MLLib implementiert sind.  Auch die übrigen Elemente des BDAS wie das Caching-Frameworks Tachyon, sowie die Streaming-Bibliothek Spark Streaming und die Graphenanwendung GraphX werden vorgestellt. Anschließend werden die APIs der einzelnen Bibliotheken gezeigt. Diese bilden die Grundlage für eigene Anwendungen mit Spark. 
+
+Des weiteren wird die BDAS-Bibliothek \textit{MLLib} mit der Alternativbibliothek \textit{H2O} verglichen. Außerdem wird ein Vergleich zwischen der Kernimplementierung von Spark wird mit dem neueren \textit{Big Data Analytics Framework} \textit{Apache Flink}\footnote{Entwickelt von der Technischen Universität Berlin zunächst unter dem Namen \textit{Stratosphere} und mittlerweile (Stand Ende 2014) \textit{Apache Incubator} Projekt} vorgestellt. 
+
+Im letzten Teil dieser Arbeit wird der Aufbau von lokalen BDAS-Stacks für verschiedene Anwendungsbereiche gezeigt. Darauf folgt die Beschreibung von Prototypen die zum Test der Spark-Infrastruktur im Rahmen dieser Arbeit implementiert wurden. Zum Schluss werden für die jeweiligen Anwendungsbereiche des BDAS Metriken definiert, welche für Messungen der Prototypen benutzt werden. 
+
+In einem Ausblick werden die Erkenntnisse aggregiert und mögliche weitere Entwicklungen prognostiziert.   
 
 
