--- a/apache_spark/thesis/grundlagen.tex
+++ b/apache_spark/thesis/grundlagen.tex
@@ -358,7 +358,7 @@ MapReduce nimmt einen Satz von Eingabe Key/Value-Pairs entgegen und produziert d
  
 
 
-In Abbildung \ref{fig:wordcount} wird das \textit{MapReduce-Modell} an einem praktischen Beispiel zur Wortzählung gezeigt. Bei \textit{MapReduce} wird zunächst eine problemspezifische \textit{Map-Funktion} definiert. Diese teilt die Ursprungsmenge mittels einer internen \textit{Split-Funktion} in gleich große Partitionen und versieht unstrukturierte Werte in einem ersten Schritt mit Standardwerten, um so aus jedem unstrukturierten Datensatz ein Key-Value-Pair zu generieren \ßciteint{xi12}. Im gezeigten Beispiel wird hier jedem Wort die Zahl Eins als Key zugeordnet. Im nächsten Schritt werden diese so gewonnenen Zwischen-Key-Value-Paare in einem \textit{Shuffling-Prozess} klassifiziert und die so homogenisierten Pakete auf die Knoten im Cluster verteilt. Nun enthält jede Ausführungseinheit nur noch gleiche Wörter. Im Reduce-Schritt schließlich, werden die gleichartigen Wörter zu Gesamtmengen zusammengefasst, addiert und im Endergebnis aggregiert. 
+In Abbildung \ref{fig:wordcount} wird das \textit{MapReduce-Modell} an einem praktischen Beispiel zur Wortzählung gezeigt. Bei \textit{MapReduce} wird zunächst eine problemspezifische \textit{Map-Funktion} definiert. Diese teilt die Ursprungsmenge mittels einer internen \textit{Split-Funktion} in gleich große Partitionen und versieht unstrukturierte Werte in einem ersten Schritt mit Standardwerten, um so aus jedem unstrukturierten Datensatz ein Key-Value-Pair zu generieren \citeint{xi12}. Im gezeigten Beispiel wird hier jedem Wort die Zahl Eins als Key zugeordnet. Im nächsten Schritt werden diese so gewonnenen Zwischen-Key-Value-Paare in einem \textit{Shuffling-Prozess} klassifiziert und die so homogenisierten Pakete auf die Knoten im Cluster verteilt. Nun enthält jede Ausführungseinheit nur noch gleiche Wörter. Im Reduce-Schritt schließlich, werden die gleichartigen Wörter zu Gesamtmengen zusammengefasst, addiert und im Endergebnis aggregiert. 
 
 An dem gezeigten Beispiel ist deutlich erkennbar, dass die einzelnen Ausführungsschritte jeweils parallelisiert und auf separate Knoten im Cluster verteilt werden können. Das Laufzeitsystem übernimmt die Details der Partitionierung der Eingabedaten, die Ressourcenverwaltung innerhalb des Clusters, das Behandeln von Fehlern und die Kommunikation zwischen den einzelnen Knoten. 
  
