--- a/apache_spark/thesis/bdas.tex
+++ b/apache_spark/thesis/bdas.tex
@@ -11,7 +11,7 @@ Rund um \textit{Hadoop} beziehungsweise \textit{Spark} wurde an der University o
 	
 	Im Folgenden wird der \textit{Berkeley Data Analytics Stack (BDAS)} näher vorgestellt, der wie in der Einführung bereits erwähnt um Hadoop, bzw. Spark als Hauptbestandteile herum aufgebaut ist. Der BDAS wurde von den \textit{AMPLabs} \footnote{kurz für „algorithms, machines and people“} von der University of California in Berkeley aufgrund von Forschungsergebnissen im Bereich der Analyse sehr großer Datenmengen ins Leben gerufen. 
 
-Der Einsatz des BDAS kann laut Vijay Agneeswaran \citelit{va14} dabei helfen, unter anderem Fragen wie die folgenden zu beantworten: 
+Der Einsatz des BDAS kann laut Vijay Agneeswaran \citelit{va14} dabei helfen, beispielsweise konkrete praktische Fragen wie die folgenden zu beantworten: 
 
 \begin{itemize}
 		\item Wie segmentiert man am besten eine Menge von Nutzern und kann herausfinden, welche Nutzersegmente an bestimmten Kampagnen interessiert sein könnten?
