--- a/apache_spark/thesis/evaluierung.tex
+++ b/apache_spark/thesis/evaluierung.tex
@@ -24,7 +24,7 @@ Lenovo ThinkPad 410T & Intel i5 & 4 physisch & 8 GB & Windows 8.1, VirtualBox In
 	\label{tab:lokale hardware}
 \end{table}  
 
-Die Tabelle \ref{cluster} zeigt die Konfiguration des verwendeten Clustersystems an der Beuth Hochschule Berlin (Konfigurationsstand Dezember 2014)
+Die Tabelle \ref{cluster} zeigt die Konfiguration (Konfigurationsstand Dezember 2014) des verwendeten Clustersystems an der Beuth Hochschule Berlin. 
 
 \begin{table}[!ht]
 \centering
