--- a/apache_spark/thesis/internetQuellen.bib
+++ b/apache_spark/thesis/internetQuellen.bib
@@ -1,12 +1,36 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-02-11 16:29:01 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-14 00:44:46 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{flc14,
+	Author = {Pivotal EMC},
+	Date-Added = {2015-02-13 23:28:37 +0000},
+	Date-Modified = {2015-02-13 23:44:46 +0000},
+	Month = {11},
+	Title = {Introducing Apache Flink - A new approach to distributed data processing URL: \url{http://www.meetup.com/HandsOnProgrammingEvents/events/210504392/}},
+	Year = {2014. \note{Aufgerufen am 07.02.2015}}}
+
+@misc{fpg15,
+	Author = {Apache Flink},
+	Date-Added = {2015-02-13 21:38:22 +0000},
+	Date-Modified = {2015-02-13 21:42:47 +0000},
+	Month = {12},
+	Title = {Apache Flink Programming Guide URL: \url{http://flink.apache.org/docs/0.8/programming_guide.html#introduction}},
+	Year = {2014. \note{Aufgerufen am 07.02.2015}}}
+
+@misc{afl14,
+	Author = {Stephan Ewen},
+	Date-Added = {2015-02-13 21:34:57 +0000},
+	Date-Modified = {2015-02-13 21:36:42 +0000},
+	Month = {09},
+	Title = {Apache Flink - Overview URL: \url{http://de.slideshare.net/stephanewen1/apache-flink-overview}},
+	Year = {2014. \note{Aufgerufen am 05.02.2015}}}
 
 @misc{vag14,
 	Author = {Mitchell Hashimoto},
