--- a/apache_spark/thesis/literaturVerzeichnis.bib
+++ b/apache_spark/thesis/literaturVerzeichnis.bib
@@ -1,31 +1,46 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-02-10 17:11:08 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-02-13 23:42:01 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@book{dag02,
+	Author = {R. Kramer, R. Gupta, M.L. Soffa},
+	Date-Added = {2015-02-13 22:38:52 +0000},
+	Date-Modified = {2015-02-13 22:42:01 +0000},
+	Edition = {2002},
+	Month = {08},
+	Number = {10.1109/71.298205},
+	Publisher = {Dept. of Comput. Sci., Pittsburgh Univ., PA, USA, IEEE},
+	Title = {The combining DAG: a technique for parallel data flow analysis},
+	Year = {1994}}
+
 @book{cbo14,
-	Author = {Stephen Soltesz, Andy Bavier, et al. },
+	Author = {Stephen Soltesz, Andy Bavier, et al.},
 	Date-Added = {2015-02-10 16:06:45 +0000},
 	Date-Modified = {2015-02-10 16:11:08 +0000},
 	Publisher = {University of Toronto, Department of Computer Science},
 	Title = {Container-based Operating System Virtualization: A Scalable, High-performance Alternative to Hypervisors},
 	Year = {2014}}
 
-@book{cite-key,
+@book{stra13,
+	Author = {Marcus Leich, Jochen Adamek, et al.},
 	Date-Added = {2015-02-08 16:29:25 +0000},
-	Date-Modified = {2015-02-08 16:29:55 +0000}}
+	Date-Modified = {2015-02-13 20:59:38 +0000},
+	Publisher = {TU Berlin, HPI Potsdam, Humboldt-Universit{\"a}t zu Berlin},
+	Title = {Applying Stratosphere for Big Data Analytics},
+	Year = {2013}}
 
 @book{dz14,
 	Author = {Ashwini Kuntamukkala},
 	Date-Added = {2015-02-08 14:22:48 +0000},
 	Date-Modified = {2015-02-08 14:24:27 +0000},
 	Edition = {1},
-	Publisher = {DZone },
+	Publisher = {DZone},
 	Title = {DZone Refcardz 204: Apache Spark},
 	Year = {2014}}
 
@@ -39,7 +54,7 @@
 	Year = {2015}}
 
 @book{dm09,
-	Author = {T. Hastie, R. Tibshirani, et al. },
+	Author = {T. Hastie, R. Tibshirani, et al.},
 	Date-Added = {2015-02-07 01:26:01 +0000},
 	Date-Modified = {2015-02-07 22:15:59 +0000},
 	Publisher = {Springer Publishing Company},
